--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,53 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  margin: 2.5px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: darkblue;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  font-family: Georgia, 'Times New Roman', Times, serif;
   color: white;
+}
+
+.App section {
+  min-height: 38vh;
+
+  background-color: rgb(45, 67, 75);
+  color: white;
+}
+
+.App footer {
+  background-color: slategray;
+  width: 100%;
+}
+
+.main-section {
+  margin-top: 5px;
+}
+
+.sub-section {
+  text-align: left;
+  padding: 5px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-links {
+  margin: 8px;
+}
+
+.text-area {
+  margin: 5px;
+}
+
+.inner-section {
+  /* display: none; */
 }
