--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,9 @@
 }
 
 .nav-links {
-  margin: 8px;
+  margin: 3px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 13px;
 }
 
 .text-area {
