--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,7 @@
 }
 
 .App section {
-  min-height: 38vh;
-
+  min-height: 78vh;
   background-color: rgb(45, 67, 75);
   color: white;
 }
@@ -25,6 +24,11 @@
 .App footer {
   background-color: slategray;
   width: 100%;
+}
+
+.App footer span {
+  font-size: 12px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .main-section {
@@ -55,6 +59,11 @@
   /* display: none; */
 }
 
+.contact-form {
+  margin-left: 2%;
+  width: 100%;
+}
+
 .contact-form label {
   display: block;
   margin-top: 10px;
@@ -64,19 +73,23 @@
 
 .contact-form div {
   display: inline-block;
-  width: 40%;
+  width: 25%;
 }
 
 .contact-form input textarea {
   margin-left: 10px;
-  width: 30%;
+  width: 25%;
 }
 
 .contact-form .submit-button {
 
-  width: 15%;
+  width: 60px;
   background-color: white;
-  margin-left: 60%
+  margin-left: 25%
 
+}
+
+li {
+  margin: 5px;
 }
 
