--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App section {
-  min-height: 78vh;
+  min-height: 77vh;
   background-color: rgb(45, 67, 75);
   color: white;
 }
@@ -24,6 +24,7 @@
 .App footer {
   background-color: slategray;
   width: 100%;
+  padding: 1px;
 }
 
 .App footer span {
@@ -40,15 +41,31 @@
   padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+a:hover, a:active{
+  background-color: darkblue;
+  color: white;
 }
 
-.nav-links {
-  margin: 4px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 13px;
-  text-decoration: none;
+@media screen and (max-width: 480px) {
+  .nav-links {
+    color: darkslategrey;
+    margin: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 13px;
+    text-decoration: none;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .nav-links {
+    color: darkslategrey;
+    margin: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 17px;
+    text-decoration: none;
+    padding-left: 4px;
+    padding-right: 4px;
+  }
 }
 
 .text-area {
@@ -91,5 +108,9 @@
 
 li {
   margin: 5px;
+}
+
+a.show-more {
+  color: white;
 }
 
