--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,31 @@
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
+
 .App {
   text-align: center;
-  margin: 2.5px;
+  margin: .5%;
+  max-width: 99%;
+  color: white;
+  height: 98vh;
+}
+
+.App .footer span {
+  font-size: 12px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+@media (min-width: 600px) {
+  .App {
+    height: 85vh;
+  }
 }
 
 .App-header {
-  background-color: darkblue;
+  background-color: #009cde;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -15,65 +36,46 @@
   color: white;
 }
 
-.App section {
-  min-height: 77vh;
-  background-color: rgb(45, 67, 75);
+nav {
+  background-color: white;
+  padding: .5%;
+}
+
+a:hover, a:active{
+  background-color: #009cde;
   color: white;
 }
 
-.App footer {
-  background-color: slategray;
-  width: 100%;
-  padding: 1px;
-}
 
-.App footer span {
-  font-size: 12px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.nav-links {
+  color: darkslategrey;
+  margin: 5px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 13px;
+  text-decoration: none;
 }
 
 .main-section {
-  margin-top: 5px;
+  float: left;
+  background-color: grey;
+  height: 83%;
+  width: 100%;
 }
 
 .sub-section {
   text-align: left;
-  padding: 5px;
-}
-
-a:hover, a:active{
-  background-color: darkblue;
-  color: white;
-}
-
-@media screen and (max-width: 480px) {
-  .nav-links {
-    color: darkslategrey;
-    margin: 5px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 13px;
-    text-decoration: none;
-  }
-}
-
-@media screen and (min-width: 481px) {
-  .nav-links {
-    color: darkslategrey;
-    margin: 10px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 17px;
-    text-decoration: none;
-    padding-left: 4px;
-    padding-right: 4px;
-  }
+  margin: 8px;
+  background-color: white;
+  color: gray;
+  height: 97%;
+  box-shadow: 2px 3px;
+  overflow: scroll;
 }
 
 .text-area {
-  margin: 5px;
-}
-
-.inner-section {
-  /* display: none; */
+  float: left;
+  margin: 15px;
+  width: 90%;
 }
 
 .contact-form {
@@ -89,21 +91,21 @@ a:hover, a:active{
 }
 
 .contact-form div {
+  margin-right: 10px;
+  margin-left: 2px;
   display: inline-block;
   width: 25%;
 }
 
-.contact-form input textarea {
+.contact-form input[type="text"] textarea {
   margin-left: 10px;
   width: 25%;
 }
 
 .contact-form .submit-button {
-
   width: 60px;
   background-color: white;
-  margin-left: 25%
-
+  margin-left: 29%
 }
 
 li {
@@ -111,6 +113,37 @@ li {
 }
 
 a.show-more {
-  color: white;
+  color: #009cde;
 }
 
+.footer {
+  float:left;
+  background-color: #009cde;
+  padding: 1%;
+  margin-top: 1%;
+  width: 98%;
+}
+
+@media screen and (min-width: 600px) {
+  .nav-links {
+    color: darkslategrey;
+    margin: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 17px;
+    text-decoration: none;
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+
+  .main-section {
+    height: 89%;
+  }
+
+  .sub-section {
+    height: 97%;
+  }
+
+  .contact-form .submit-button {
+    margin-left: 29%
+  }
+}
