--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html, body {
   overflow-x: hidden;
 }
+
 body {
   position: relative;
 }
@@ -69,7 +70,9 @@ a:hover, a:active{
   color: gray;
   height: 97%;
   box-shadow: 2px 3px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 .text-area {
@@ -127,15 +130,14 @@ a.show-more {
 .project-rotator {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 18% 70%;
+  grid-template-rows: 1fr 3fr;
   grid-row-gap: 2%;
   height: 70%;
 }
 
 .project-rotator-buttons {
   display: grid;
-  grid-template-columns: 50% 50%;
-  /* border: solid 1px green; */
+  grid-template-columns: 1fr 1fr;
   margin-top: 2%;
   margin-right: 2%;
   margin-left: 2%;
@@ -143,14 +145,10 @@ a.show-more {
 
 .project-button-wrapper {
   text-align: center;
+  margin: 2px;
 }
 
 .project-content-wrapper {
-  -webkit-transition-duration: 600ms;
-  transition-duration: 600ms;
-}
-
-.project-content-wrapper1 .project-content-wrapper-2 {
   -webkit-transition-duration: 600ms;
   transition-duration: 600ms;
 }
@@ -171,23 +169,39 @@ a.show-more {
 
 .project-content {
   height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  border: solid 1px purple;
+  border: solid 1px lightgray;
   margin-left: 2%;
   margin-right: 2%;
+  box-shadow: 2px 3px;
+}
+
+.project-details {
+  margin-top: 5%;
+  margin-right: 15%;
+  margin-left: 15%;
+  height: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.detail-header-text {
+  color: #009cde;
+}
+
+.project-header {
+  margin: 10px;
 }
 
 .goal-content {
   display: grid;
-  grid-template-rows: 20% 80%;
+  grid-template-rows: 1fr 3fr;;
   justify-items: center;
   margin: 2%;
 }
 
 .tech-content {
   display: grid;
-  grid-template-rows: 20% 80%;
+  grid-template-rows: 1fr 3fr;;
   justify-items: center;
   margin: 2%;
 }
