fine-tuning styles

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,246 +1,6 @@
-$background-white: white;
-$background-blue: #009cde;
-$main-background-gray: lightgray;
-$gray: gray;
-$font-header: Georgia, 'Times New Roman', Times, serif;
-$font-nav: Georgia, 'Times New Roman', Times, serif;
-$font-footer: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-$heading-text-color: $background-blue;
-$box-shadow: 4px 3px;
-$button-height: 30px;
 
-html, body {
-  overflow-x: hidden;
-}
-
-body {
-  position: relative;
-}
-
-button {
-  background-color: $background-blue;
-  color: $background-white;
-  height: $button-height;
-}
-
-button:disabled {
-  background-color: lighten($background-blue, 45%);
-}
-
-.submit-button {
-  background-color: $background-blue;
-  color: $background-white;
-  height: $button-height;
-}
-
-form {
-  height: 80%;
-  position: absolute;
-}
-
-#profile-pic {
-  height: 22%;
-  width: 22%;
-  float:right;
-  margin: 4%;
-  box-shadow: $box-shadow;
-}
-
-.App {
-  text-align: center;
-  margin: .5%;
-  max-width: 99%;
-  color: $background-white;
-  height: 98vh;
-}
-
-.App .footer span {
-  font-size: 12px;
-  font-family: $font-footer;
-}
-
-@media (min-width: 600px) {
-  .App {
-    height: 85vh;
-  }
-}
-
-.App-header {
-  background-color: $background-blue;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  font-family: $font-header;
-  color: $background-white;
-}
-
-nav {
-  background-color: $background-white;
-  padding: .5%;
-}
-
-a:hover, a:active{
-  background-color: complement($gray);
-  color: $background-white;
-}
-
-
-.nav-links {
-  color: $gray;
-  margin: 5px;
-  font-family: $font-nav;
-  font-size: 13px;
-  text-decoration: none;
-}
-
-.main-section {
-  float: left;
-  background-color: $main-background-gray;
-  height: 83%;
-  width: 100%;
-}
-
-h3 {
-  color: $heading-text-color;
-}
-
-.sub-section {
-  text-align: left;
-  margin: 8px;
-  background-color: $background-white;
-  color: $gray;
-  height: 97%;
-  box-shadow: $box-shadow;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  max-width: 100%;
-}
-
-.text-area {
-  float: left;
-  margin: 15px;
-  width: 90%;
-  min-height: 70%;
-}
-
-li {
-  margin: 5px;
-}
-
-a.show-more {
-  color: $background-blue;
-}
-
-.footer {
-  float:left;
-  background-color: $background-blue;
-  padding: 1%;
-  margin-top: 1%;
-  width: 98%;
-}
-
-.project-rotator {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 3fr;
-  grid-row-gap: 2%;
-  height: 70%;
-}
-
-.project-rotator-buttons {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 2%;
-  margin-right: 2%;
-  margin-left: 2%;
-}
-
-.project-button-wrapper {
-  text-align: center;
-  margin: 2px;
-}
-
-.project-content-wrapper {
-  -webkit-transition-duration: 600ms;
-  transition-duration: 600ms;
-}
-
-#project-content-wrapper-2 {
-  display: none;
-}
-
-.project-content-wrapper.next {
-  transform: translate(100%);
-  -webkit-transform: translate(100%); 
-}
-
-.project-content-wrapper.previous {
-  transform: translate(-100%);
-  -webkit-transform: translate(-100%); 
-}
-
-.project-content {
-  height: 100%;
-  border: solid 1px $gray;
-  margin-left: 3%;
-  margin-right: 3%;
-  box-shadow: $box-shadow;
-}
-
-.project-details {
-  margin-top: 5%;
-  margin-right: 15%;
-  margin-left: 15%;
-  height: 80%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.detail-header-text {
-  color: $background-blue;
-}
-
-.project-header {
-  margin: 10px;
-}
-
-.goal-content {
-  display: grid;
-  grid-template-rows: 1fr 3fr;;
-  justify-items: center;
-  margin: 2%;
-}
-
-.tech-content {
-  display: grid;
-  grid-template-rows: 1fr 3fr;;
-  justify-items: center;
-  margin: 2%;
-}
-
-@media screen and (min-width: 600px) {
-  .nav-links {
-    color: $gray;
-    margin: 10px;
-    font-family: $font-nav;
-    font-size: 17px;
-    text-decoration: none;
-    padding-left: 4px;
-    padding-right: 4px;
-  }
-
-  .main-section {
-    height: 89%;
-  }
-
-  .sub-section {
-    height: 97%;
-  }
-
-  .contact-form .submit-button {
-    margin-left: 29%
-  }
-}
+@import 'Variables.scss';
+@import 'Base.scss';
+@import 'Rotator.scss';
+@import 'Form.scss';
+@import 'Desktop.scss';
