--- a/src/styles/Base.scss
+++ b/src/styles/Base.scss
@@ -77,7 +77,7 @@ h3 {
     float: left;
     margin: 15px;
     width: 90%;
-    min-height: 70%;
+    min-height: 90%;
 }
 
 #profile-pic {
@@ -106,6 +106,20 @@ button {
 button:disabled {
     background-color: lighten($background-blue, 45%);
 }
+
+#admin_header_text {
+    width: 70%;
+    float: left;
+    // margin: 0;
+    // padding: 0;
+}
+
+#logout_button {
+    margin: 5%;
+    float: left;
+}
+
+// Footer
   
 .footer {
     float:left;
