--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -1,5 +1,5 @@
 $background-white: white;
-$background-blue: #009cde;
+$background-blue: #000066;
 $main-background-gray: lightgray;
 $gray: gray;
 $font-header: Georgia, 'Times New Roman', Times, serif;
